@@ -1,9 +1,23 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX cpulimit-1.1-makefile.patch 312 SHA256 dfea481a0301615594a3d9cd0275c7eccaf3e8350c4b7d730ed3c39e6ef123e1 SHA512 4a18b3ae86a987c15b79b29e16d2253a152e55a2fc930a04acae76b3869128dd37610d46620c9bbfa11d9d3612869f79dc39f79ff34f70ce84c7d4dac271be31 WHIRLPOOL 360bce2103e54f5bdc019490870eae9bebe32bf1c535e80120def0abbbcd64838a42c309d96fedbffdefd74eacda6427a7b4ca35a19843a6cdb651e19b36740e
 AUX cpulimit-9999-cflags.patch 486 SHA256 860bbba18acbd4a3fe73bcd8d873a33cbaada1ded5daf88203e13adef3f16592 SHA512 a84c6b43b8cf7694058bfb37e8793be05d0910c59b7f770b9662586252e3fbc2a34d2760a18abd143729ae8d5f0d41577f3409ef4cee1707ebcccd083f4d866c WHIRLPOOL 3ce6ab5608b012b7c992c90367d54697efca53792e3dc9556777b3be4a162b5a30dd7e5b0cec79de744bd5220d3472be9a3ad4318b3bcc953a1c95a3775fd9bc
 AUX cpulimit.8 1451 SHA256 4c3591679acf33f82d7e282cf63b3ff42683a7e7553ecc7b02ad2714285e013c SHA512 3cceb217f5053aa6583a13ada2ef9ed6370859bb072474fcc6fef88f5184985b0a369b1f0c1ead634b07a1318ea1f81a4f4128de95513f9e6cabdf86223f6083 WHIRLPOOL 63cec3e9adf5e1e854f580c175028b1cce3159bc4ea709af0e98f52635acdac33ab00d8b2e41d83b9d4e83441b98997d9beeeeb8870b0306d52d907ef1d35c1a
 DIST cpulimit-1.1.tar.gz 5130 SHA256 ee734e82692dc496a083c003340b326bd779567f5de99fcae99e451606c85c00 SHA512 dfc111e90ee01f1f5277b5be1e5f9dbccb560dced335207b58b5db2a370013f76dd557dd3f63d9501011f3b34c41e21b5845fc4ac00f3eceac8b1179db1c747b WHIRLPOOL d763ea90f882c27a25d5d33bbafb8c4a3834513987d6c1a8e94cf5bed6f8d4046b4491b7b9fdfe09d3047f27cd6b015b6514c67aa609f653bda56ad06a8731fa
 DIST cpulimit-1.8.tar.gz 20610 SHA256 8d0cdc3ec3e462f2ddc6debb195e1a4e7a19cce8233211f473d921f1c517d5f5 SHA512 3098236139b092eb706ec2a6b84528a090b3f4b8b3adfc8debda1b92ffa119ed9adc508898e0f98add593561f5f6b67d52e0966de01a682a6e2e885e3c47b0fa WHIRLPOOL f9be855b9a4b010c8456c2841afc3551a9a28bfc4a9ec3211e2c1e312bf43cdce9e1b745cc325342433feca5a73df03860469ea3a966d3bd37f7ad11a1627510
 EBUILD cpulimit-1.1.ebuild 682 SHA256 b9f6bba7cb8c0b2b98d3053affd61491c2ee2d9100442191951ba13085b99acc SHA512 be30f72baf98eb05b436552541e3917b3e16be997938c738afbdfe32d594c51560559b94ceddeb00b51cfc183a2ef4b79858409dec6b171b760e9d85a5b16ccf WHIRLPOOL f54f1c5a34cac939e37f98f58876fc688645efbc7c61cc2b690dc0c8d800fb25c6173ac7b90cb75df05f5775e4b6648ccea36637478fb1e448a9ce28f51e4621
-EBUILD cpulimit-1.8.ebuild 573 SHA256 f102d4f2ab539bb35a9935e409c7a4e4b5f86f6e902d777de3dcc497d93d68f9 SHA512 9fd962f513fb29696a38e5332ade14721b55bc62cbe2f115271c32d42ee942f4244bd8392e708d5277f90766a408005ae0dfa39fbf7f8590821f09aa03922161 WHIRLPOOL bd3d2d57cc067c7aae8c78b057cf47abb35b5d60e962290e9b41a8169999ddd688a12b8b86725f5911016890dfcff9b8086c4ac7c9c3d7e5d9baa9e3584cf552
-MISC ChangeLog 1765 SHA256 217a83a8bf0a282ad83bd24bbfcc21e35d0cbfcf548598277e65b382ff34b6c6 SHA512 618e13e01db39c07bfc6fda45d845f29030bff7992de97e8084724e2e125e188d4e1d4a1cdb2fb634d350de3374a0b1e461cd432855bcd781738f3dc35459141 WHIRLPOOL 90235106804f4f361d664a4dab6688c7b142d4c96f09fcbaf24d5221c13b48e0a5d43b47fee6c56a0d17e2baa096dd72077d35689a0e2728e847b686f0c1e147
+EBUILD cpulimit-1.8.ebuild 692 SHA256 5f002aa05deb896c9964f09110c9db45a1f8f5965a4f71aea3d039113e1c7f7b SHA512 85c43fcb7ac366164505f818fce59e74ab91e93285dacc657039df34d8b4f5ba789b4e25989113b2c317c789b86c03ee1e6804a8f86980ddcd59e3f32dc44a07 WHIRLPOOL 34e53a282e3a280ab8f45c2b69175b936e65ab6a8fa82eee38e79f5a6679067acdb5b8d6efa60834a90535c0cd273ac37d769bddb48c4b1ba5551f67797552bd
+MISC ChangeLog 1913 SHA256 c464c72bd8b71fdc939147fa2560046b64f84f5070ed5c8ad09506f6d34609ec SHA512 93ee80c85b5a3350a49f3f9432ea880a9df9c750d786cb521f43cc52db2339987b5ec4bb4ca73f0f39d542c3506f11f8e8ef7770959d56d55087e4ed1d28b772 WHIRLPOOL fc5cb52e955cb11db8ef83f1b476eb18cd87009393dbfac9f68815559c693a2af075a6da9f43e1cd446abfb84bf6bb9a18d8d797ad36468f7ea96cfd39c96818
 MISC metadata.xml 211 SHA256 84ff2341253cdd21a6782e14ebc076a8bcae11428aacfe2454f4b32165504727 SHA512 a9385b7dc02a9537080a9b1bf59ae2caacd84cab2e3ef1fee15e4f10d5518ae9f71e4ce07d99104e643d18a79ca05116d74e97ec7d230d21b340656701547078 WHIRLPOOL 4309ff085fbfd1a91434c0a9dd4c23b7ad8b10b0559beedcb4d911745543745691abe91bb1e361dd88b6383678f020c95deb9359876319a6407ac0ef2dcbd221
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQEcBAEBCAAGBQJRJhgUAAoJECo/aRed9267Zs0H/3DOPzVR0HmEn1tUWS/dWBI0
+Aqgoq3o/M9zS9THWzLw49g0MGMS9oCB86D2V8pXGR18V81afcy1GevyYSerjadYd
+U8M1peZwlUJItsJqrAFjFvpL5XuPdLevQuRXDlJmPB1EpWMI5PlzD5RfimkPYV57
+QTvIuVSHlgIL+gjTWMjvsbB5b+ge4qJTHNCqAEJx1EtUETobFGntjCZrhmp16/AQ
+zPg3K69Nv6Bt32PVQO7fkt1rmncCA6qLOMW/SFfxHmI+2bewfS/v8jsXBpVn0TPo
+dsS0aiJ8MqFObt+gRtKvkWmRGMlrY5ynoHELIW4gV81jj1+/Bz2WFr1NQv6wWV0=
+=febN
+-----END PGP SIGNATURE-----
