@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/cpulimit
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/cpulimit/ChangeLog,v 1.11 2012/12/30 14:21:12 ago Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-admin/cpulimit/ChangeLog,v 1.12 2013/02/21 12:50:23 pinkbyte Exp $
+
+  21 Feb 2013; Sergey Popov <pinkbyte@gentoo.org> cpulimit-1.8.ebuild:
+  Set correct package version in source file(upstream forgot to do it)
 
   30 Dec 2012; Agostino Sarubbo <ago@gentoo.org> -cpulimit-9999.ebuild:
   There is not anymore a git/svn repo.
